# cmake

./: hello.c  hello.cpp
test_cmake/: CMakeLists.txt
test_cmake_opencv/: CMakeCache.txt  Makefile  cmake_install.cmake
test_cmake_opencv/include/: fib.h
test_cmake_opencv/src/: fib.cpp
test_struct/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test_struct/src/: test.cpp
